# ns-emu-mod-downloader

./: Cargo.toml  README.md
.github/workflows/: release.yml
resources/: game-title-ids.xml  theboy181.xml  yuzu-mod-archive.xml
src/: archive.rs  curl_helper.rs  main.rs  mod_downloader.rs  utils.rs
src/downloaders/: downloader_ext.rs  mod.rs  mod_downloader.rs  theboy181_downloader.rs  yuzu_mod_archive_downloader.rs
src/entities/: game.rs  github.rs  mod.rs  repository.rs  tree.rs
