[package]
name = "ns-emu-mod-downloader"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
curl = "0.4.48"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.142"
sevenz-rust = "0.6.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
