[package]
name = "ns-emu-mod-downloader"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
curl = "0.4.48"
dirs = "6.0.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
